syntax = "proto3";

package proto;

option go_package = "/pb";

message ServiceNode {
  string name = 1;
  string addr = 2;
  int32 weight = 3;
}