syntax = "proto3";

package proto;

option go_package = "/pb";

message GetRequest {
  string group = 1;
  string key = 2;
}


message GetResponse {
  bytes value = 1;
  string msg = 2;
}

message SetRequest {
  string group = 1;
  string key = 2;
  bytes value = 3;
  int64 expire = 4;
}

message SetResponse {
  string msg = 1;
}

message DelRequest {
  string group = 1;
  string key = 2;
}

message DelResponse {
  string group = 1;
  string key = 2;
}

message HelloRequest {

}

message HelloResponse {

}

service Peer {
  rpc Hello(HelloRequest) returns(HelloResponse) ;
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Del(DelRequest) returns (DelResponse);
}